# mlflow-tutorials

./: .gitignore  diabetes.py  main.py  pyproject.toml
artifacts/: lightgbm_feature_importance.csv  randomforest_feature_importance.csv  xgboost_feature_importance.csv
data/: model_comparison.csv  model_results.json  project_metadata.json  target_set.csv
data/cv_results/: lightgbm_cv_results.csv  randomforest_cv_results.csv  xgboost_cv_results.csv
data/feature_importance/: lightgbm_importance.csv  randomforest_importance.csv  xgboost_importance.csv
models/: lightgbm.joblib  randomforest.joblib  xgboost.joblib
src/model_training/: model_training.py
src/preprocessing/: __init__.py  data_loader.py  preprocessing.py
src/utils/: __init__.py  io_utils.py  logging_utils.py  time_utils.py
